<resources>
    <string name="app_name">Track Me</string>
    <string name="start_record_description">Start record</string>
    <string name="pause_record_description">Pause record</string>
    <string name="re_record_tracking_description">Re-record tracking</string>
    <string name="stop_record_description">Stop record</string>
    <string name="distance">%.2f Km \nDistance</string>
    <string name="speed">%.1f Km/h \nSpeed</string>
    <string name="speed_avg">%.1f Km/h \nAvg.Speed</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Track Me\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string name="location_updated">Location Updated: %1$s</string>
</resources>