<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/dim_20dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_speed"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".ui.TrackingFragment" />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dim_20dp"
            android:layout_marginBottom="@dimen/dim_20dp"
            android:gravity="center"
            android:text="@string/distance"
            style="@style/TextAppearance.AppCompat.Body1"
            app:layout_constraintBottom_toTopOf="@+id/img_action_pause"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_speed"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dim_20dp"
            android:gravity="center"
            android:text="@string/speed"
            app:layout_constraintBottom_toTopOf="@+id/img_action_pause"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Chronometer
            android:id="@+id/tv_timer"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dim_20dp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_speed"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_speed"
            tools:text="21:35:69" />


        <ImageView
            android:id="@+id/img_action_pause"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:foreground="?selectableItemBackgroundBorderless"
            android:padding="10dp"
            android:contentDescription="@string/pause_record_description"
            android:src="@drawable/ic_baseline_pause_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="visible"
            tools:ignore="UnusedAttribute" />

        <LinearLayout
            android:id="@+id/linear_contain_actions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/img_action_re_record"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/re_record_tracking_description"
                android:src="@drawable/ic_re_record"
                android:padding="10dp"
                android:foreground="?selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UnusedAttribute" />

            <ImageView
                android:id="@+id/img_action_stop"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:padding="10dp"
                android:contentDescription="@string/stop_record_description"
                android:src="@drawable/ic_baseline_stop_24"
                android:foreground="?selectableItemBackgroundBorderless"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UnusedAttribute" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>